--- a/dom-practice/DOM-lab/index.html
+++ b/dom-practice/DOM-lab/index.html
@@ -2,6 +2,7 @@
     <header>
         <link rel="stylesheet" href="styles.css">
       <nav id="top-menu"></nav>
+      <nav id="sub-menu"></nav>
     </header>
     <main></main>
   
